linux-anvil: Install `lsb_release` to aid the `gcc` post link scripts.

--- a/linux-anvil/Dockerfile
+++ b/linux-anvil/Dockerfile
@@ -17,6 +17,7 @@ RUN yum update -y && \
     yum install -y \
                    bzip2 \
                    make \
+                   redhat-lsb-core \
                    patch \
                    tar \
                    which \
