--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,12 @@ matrix:
 
     - os: linux
       env:
+        - DOCKERIMAGE=linux-anvil-aarch64
+        - DOCKERTAG=8
+        - CENTOS_VER=8
+
+    - os: linux
+      env:
         - DOCKERIMAGE=linux-anvil-cuda
         - DOCKERTAG=9.2
         - CUDA_VER=9.2
