--- a/.travis.yml
+++ b/.travis.yml
@@ -69,6 +69,13 @@ matrix:
 
     - os: linux
       env:
+        - DOCKERIMAGE=linux-anvil-cuda
+        - DOCKERTAG=11.1
+        - CUDA_VER=11.1
+        - CENTOS_VER=7
+
+    - os: linux
+      env:
         - DOCKERIMAGE=miniforge3
         - DOCKERTAG=latest
 
