Add linux-anvil-aarch64 centos8 image
Signed-off-by: Jordan Jacobelli <jjacobelli@nvidia.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,6 +30,10 @@ jobs:
           DOCKERTAG: latest
           CENTOS_VER: "7"
 
+        - DOCKERIMAGE: linux-anvil-aarch64
+          DOCKERTAG: "centos8"
+          CENTOS_VER: "8"
+
         - DOCKERIMAGE: linux-anvil-cuda
           DOCKERTAG: "9.2"
           CUDA_VER: "9.2"
