--- a/.github/workflows/keep-alive.yaml
+++ b/.github/workflows/keep-alive.yaml
@@ -2,7 +2,7 @@ name: Keep
 on:
   # pull_request:
   schedule:
-    - cron: "0 6 * * SUN"  # Once weekly on Sunday @ 0600 UTC 
+    - cron: "0 6 * * SUN" # Once weekly on Sunday @ 0600 UTC 
 
 jobs:
   keep-alive:
@@ -10,10 +10,7 @@ jobs:
     if: github.repository == 'conda-forge/docker-images'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: gautamkrishnar/keepalive-workflow@beb86212524e1ae856d1cd80efb44e73bf7daf4a
+      - uses: actions/checkout@0ad4b8fadaa221de15dcec353f45205ec38ea70b # v4
+      - uses: gautamkrishnar/keepalive-workflow@beb86212524e1ae856d1cd80efb44e73bf7daf4a # 2.0.1
         with:
-          commit_message: "Ah ah ah, stayin' alive"
-          committer_username: conda-forge-bot
-          committer_email: "conda-forge-bot@users.noreply.github.com"
-          time_elapsed: 50  # days
+          time_elapsed: 50 # days
