--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -92,6 +92,30 @@ jobs:
             DISTRO_VER: "8"
             SHORT_DESCRIPTION: "conda-forge build image for Alma 8 on ppc64le"
 
+          - DOCKERIMAGE: linux-anvil-alma-x86_64
+            DOCKERFILE: linux-anvil
+            DOCKERTAG: "9"
+            DISTRO_ARCH: "amd64"
+            DISTRO_NAME: "almalinux"
+            DISTRO_VER: "9"
+            SHORT_DESCRIPTION: "conda-forge build image for Alma 9 on x86_64"
+
+          - DOCKERIMAGE: linux-anvil-alma-aarch64
+            DOCKERFILE: linux-anvil
+            DOCKERTAG: "9"
+            DISTRO_ARCH: "arm64"
+            DISTRO_NAME: "almalinux"
+            DISTRO_VER: "9"
+            SHORT_DESCRIPTION: "conda-forge build image for Alma 9 on aarch64"
+
+          - DOCKERIMAGE: linux-anvil-alma-ppc64le
+            DOCKERFILE: linux-anvil
+            DOCKERTAG: "9"
+            DISTRO_ARCH: "ppc64le"
+            DISTRO_NAME: "almalinux"
+            DISTRO_VER: "9"
+            SHORT_DESCRIPTION: "conda-forge build image for Alma 9 on ppc64le"
+
     env:
       DOCKERIMAGE: ${{ matrix.cfg.DOCKERIMAGE }}
       DOCKERFILE: ${{ matrix.cfg.DOCKERFILE }}
