--- a/linux-anvil/Dockerfile
+++ b/linux-anvil/Dockerfile
@@ -39,7 +39,7 @@ RUN /opt/docker/bin/fix_rpm
 
 # Install basic requirements.
 COPY scripts/yum_clean_all /opt/docker/bin/
-RUN if [ "${DISTRO_NAME}${DISTRO_VER}" = "almalinux8" ]; then \
+RUN if [ "${DISTRO_NAME}" = "almalinux" ]; then \
       EXTRA_YUM_PKGS="glibc-minimal-langpack glibc-langpack-en"; \
     fi && \
     yum update -y && \
