--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -46,9 +46,9 @@ jobs:
             DOCKERTAG: "11.8"
             CUDA_VER: "11.8.0"
             DISTRO_ARCH: "amd64"
-            DISTRO_NAME: "centos"
-            DISTRO_VER: "7"
-            SHORT_DESCRIPTION: "conda-forge build image for CentOS 7 on x86_64 with CUDA"
+            DISTRO_NAME: "ubi"
+            DISTRO_VER: "8"
+            SHORT_DESCRIPTION: "conda-forge build image for UBI 8 on x86_64 with CUDA 11.8"
 
           - DOCKERIMAGE: linux-anvil-ppc64le-cuda
             DOCKERFILE: linux-anvil-cuda
@@ -57,7 +57,7 @@ jobs:
             DISTRO_ARCH: "ppc64le"
             DISTRO_NAME: "ubi"
             DISTRO_VER: "8"
-            SHORT_DESCRIPTION: "conda-forge build image for CentOS 8 on ppc64le with CUDA"
+            SHORT_DESCRIPTION: "conda-forge build image for UBI 8 on ppc64le with CUDA 11.8"
 
           - DOCKERIMAGE: linux-anvil-aarch64-cuda
             DOCKERFILE: linux-anvil-cuda
@@ -66,7 +66,7 @@ jobs:
             DISTRO_ARCH: "arm64"
             DISTRO_NAME: "ubi"
             DISTRO_VER: "8"
-            SHORT_DESCRIPTION: "conda-forge build image for CentOS 8 on aarch64 with CUDA"
+            SHORT_DESCRIPTION: "conda-forge build image for UBI 8 on aarch64 with CUDA 11.8"
 
           - DOCKERIMAGE: linux-anvil-alma-x86_64
             DOCKERFILE: linux-anvil
