--- a/linux-anvil/Dockerfile
+++ b/linux-anvil/Dockerfile
@@ -18,6 +18,9 @@ ENV DISTRO_ARCH=${DISTRO_ARCH} \
 ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US.UTF-8
 
+# bust the docker cache so that we always rerun the installs below
+# ADD https://loripsum.net/api /opt/docker/etc/gibberish
+# ADD https://worldtimeapi.org/api/timezone/Etc/UTC /opt/docker/etc/gibberish
 # Add qemu in here so that we can use this image on regular linux hosts with qemu user installed
 ADD qemu-aarch64-static /usr/bin/qemu-aarch64-static
 ADD qemu-ppc64le-static /usr/bin/qemu-ppc64le-static
