install diffutils in the docker images

--- a/linux-anvil-cuda/Dockerfile
+++ b/linux-anvil-cuda/Dockerfile
@@ -57,6 +57,7 @@ RUN yum update -y --disablerepo=cuda && \
         sudo \
         tar \
         which \
+        diffutils \
     && \
     /opt/docker/bin/yum_clean_all
 
