--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -219,15 +219,4 @@ jobs:
     permissions:
       actions: write
     steps:
-      - name: Keep alive
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-        shell: sh
-        run: |
-          case "${GITHUB_WORKFLOW_REF:?}" in
-            "${GITHUB_REPOSITORY:?}"/.github/workflows/*.y*ml@*) ;;
-            *) false ;;
-          esac
-          workflow="${GITHUB_WORKFLOW_REF%%@*}"
-          workflow="${workflow#${GITHUB_REPOSITORY}/.github/workflows/}"
-          gh api -X PUT "repos/${GITHUB_REPOSITORY}/actions/workflows/${workflow}/enable"
+      - uses: conda-forge/keepalive-action@7a9194bad497f0b993708eeaf10fc0a2d726eb71          
